--- a/MAStucco/templates/base.html
+++ b/MAStucco/templates/base.html
@@ -1,13 +1,31 @@
-{% load staticfiles %}
-
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="MAStucco's Web Application.">
+    <meta name="author" content="Pythoneers">
+    <link rel="icon" href="#">
+
     <title>{{ page_title }}</title>
-    <link rel="stylesheet" href="{% static 'css/wamastucco.css' %}">
+
+    <!-- Bootstrap core CSS -->
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <link href="{% static 'css/ie10-viewport-bug-workaround.css' %}" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="{% static 'css/navbar-fixed-top.css' %}" rel="stylesheet">
 </head>
 <body>
+
+    {% block navbar %}
+    {% endblock %}
+
     {% if messages %}
         <ul class="messages">
             {% for message in messages %}
@@ -18,5 +36,13 @@
 
     {% block content %}
     {% endblock %}
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="{% static 'js/jquery-3.1.1.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="{% static 'js/ie10-viewport-bug-workaround.js' %}"></script>
 </body>
 </html>
