--- a/MAStucco/templates/home.html
+++ b/MAStucco/templates/home.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Home | MAStucco</title>
 </head>
 <body>
-
+    <h1>HOLA</h1>
 </body>
 </html>
