Modified lot attribute in Job Model definition. Added method decorator @login_required to all view functions except login and logout. Made some modifications to the Login page for design purposes, modifying some css files and creating a login.css file.

--- a/MAStucco/templates/login.html
+++ b/MAStucco/templates/login.html
@@ -1,26 +1,24 @@
 {% extends 'base.html' %}
+{% load static %}
+
+{% block custom_css %}
+    <link href="{% static 'css/login.css' %}" rel="stylesheet">
+{% endblock %}
+
 {% block content %}
 
-    <div class="container" id="LoginContainer">
-        <div class="centered text-center">
-            <h1>MAStucco</h1>
-             <p>Login with your credentials.</p>
-             <p><b>{{ error }}</b></p>
-             {% if form.errors%}
-                 <p>Your password or username is incorrect.</p>
-             {% endif %}
-
-            <form action='' method='post'>
-                 {% csrf_token %}
-                 <label for='username'>Username :</label> <br/>
-                 <input type='text' name='username' id='username'> <br/>
-                 <label for='password'>Password :</label><br/>
-                 <input type='password' name='password' id='password'> <br/>
-                <br/>
-                 <input type='submit' value='Log in'>
-             </form>
-            <br/>
-        </div>
+    <div class="container">
+        <form action="" method="post" class="form-signin">
+            {% csrf_token %}
+            <h2 class="form-signin-heading">Login with your credentials</h2>
+            <label for="inputUsername" class="sr-only">Username</label>
+            <input type="text" id="inputUsername" name="inputUsername" class="form-control" placeholder="Username"
+                   required autofocus>
+            <label for="inputPassword" class="sr-only">Password</label>
+            <input type="password" id="inputPassword" name="inputPassword" class="form-control" placeholder="Password"
+                   required>
+            <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+        </form>
     </div>
 
  {% endblock %}
