--- a/MAStucco/templates/base.html
+++ b/MAStucco/templates/base.html
@@ -19,7 +19,10 @@
     <link href="{% static 'css/ie10-viewport-bug-workaround.css' %}" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="{% static 'css/navbar-fixed-top.css' %}" rel="stylesheet">
+    <link href="{% static 'css/wamastucco.css' %}" rel="stylesheet">
+
+    {% block custom_css %}
+    {% endblock %}
 </head>
 <body>
 
