--- a/MAStucco/templates/login.html
+++ b/MAStucco/templates/login.html
@@ -7,18 +7,24 @@
 
 {% block content %}
 
-    <div class="container">
-        <form action="" method="post" class="form-signin">
-            {% csrf_token %}
-            <h2 class="form-signin-heading">Login with your credentials</h2>
-            <label for="inputUsername" class="sr-only">Username</label>
-            <input type="text" id="inputUsername" name="inputUsername" class="form-control" placeholder="Username"
-                   required autofocus>
-            <label for="inputPassword" class="sr-only">Password</label>
-            <input type="password" id="inputPassword" name="inputPassword" class="form-control" placeholder="Password"
-                   required>
-            <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-        </form>
+    <div class="container"">
+        <div class="row">
+            <div class="col-md-4 col-md-offset-4">
+                <div style="background-color: rgba(0, 0, 0, 0.3);border-radius: 15px;padding-bottom: 23px;">
+                    <form action="" method="post" class="form-signin">
+                        {% csrf_token %}
+                        <h2 class="form-signin-heading">Login with your credentials</h2>
+                        <label for="inputUsername" class="sr-only">Username</label>
+                        <input type="text" id="inputUsername" name="inputUsername" class="form-control" placeholder="Username"
+                               required autofocus>
+                        <label for="inputPassword" class="sr-only">Password</label>
+                        <input type="password" id="inputPassword" name="inputPassword" class="form-control" placeholder="Password"
+                               required>
+                        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+                    </form>
+                </div>
+            </div>
+        </div>
     </div>
 
  {% endblock %}
