--- a/MAStucco/templates/base.html
+++ b/MAStucco/templates/base.html
@@ -47,5 +47,7 @@
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="{% static 'js/ie10-viewport-bug-workaround.js' %}"></script>
+    {% block custom_js %}
+    {% endblock %}
 </body>
 </html>
