--- a/MAStucco/templates/home.html
+++ b/MAStucco/templates/home.html
@@ -29,23 +29,30 @@
     </nav>
 {% endblock %}
 {% block content %}
+    <br/>
     {% if user.is_staff %}
-        <div class="panel panel-default">
-            <!-- Default panel contents -->
-            <div class="panel-heading">
-                <h2 class="panel-title">Pending Work Orders</h2>
-            </div>
-            <!-- List group -->
-            <div class="list-group">
-                {% for work_order in work_orders %}
-                    <a href="#" class="list-group-item">
-                        <h4 class="list-group-item-heading">Customer: {{ work_order.customer }}</h4>
-                        <p class="list-group-item-text"><strong>Phase:</strong> {{ work_order.work_phase|extend_work_phase }}</p>
-                        <p class="list-group-item-text"><strong>Worker:</strong> {{ work_order.assigned_worker.first_name }}
-                            {{ work_order.assigned_worker.last_name }}</p>
-                        <p class="list-group-item-text"><strong>Date:</strong> {{ work_order.date|date:'l, F jS' }}</p>
-                    </a>
-                {% endfor %}
+        <div class="container-fluid" id="uncashed_jobs">
+            <div class="row">
+                <div class="col-md-8">
+                    <div class="panel panel-default">
+                        <!-- Default panel contents -->
+                        <div class="panel-heading">
+                            <h2 class="panel-title">Pending Work Orders</h2>
+                        </div>
+                        <!-- List group -->
+                        <div class="list-group">
+                            {% for work_order in work_orders %}
+                                <a href="#" class="list-group-item">
+                                    <h4 class="list-group-item-heading">Customer: {{ work_order.customer }}</h4>
+                                    <p class="list-group-item-text"><strong>Phase:</strong> {{ work_order.work_phase|extend_work_phase }}</p>
+                                    <p class="list-group-item-text"><strong>Worker:</strong> {{ work_order.assigned_worker.first_name }}
+                                        {{ work_order.assigned_worker.last_name }}</p>
+                                    <p class="list-group-item-text"><strong>Date:</strong> {{ work_order.date|date:'l, F jS' }}</p>
+                                </a>
+                            {% endfor %}
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     {% else %}
