--- a/MAStucco/WAMAStucco/static/css/wamastucco.css
+++ b/MAStucco/WAMAStucco/static/css/wamastucco.css
@@ -100,7 +100,7 @@ body {
 .form-signin .form-control:focus {
   z-index: 2;
 }
-.form-signin input[type="email"] {
+.form-signin input[type="text"] {
   margin-bottom: -1px;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
@@ -109,6 +109,9 @@ body {
   margin-bottom: 10px;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
+}
+.form-signin .form-signin-warning {
+    color: #e26130;
 }
 
 /* BUTTON STYLING */
