--- a/MAStucco/templates/home.html
+++ b/MAStucco/templates/home.html
@@ -1,39 +1,66 @@
 {% extends 'base.html' %}
 {% load filters %}
 {% block navbar %}
-    <!-- Fixed navbar -->
-    <nav class="navbar navbar-default navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="http://127.0.0.1:8000/">MAStucco</a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="http://127.0.0.1:8000/">Home</a></li>
-            <li><a href="http://127.0.0.1:8000/workorders/">Work Orders</a></li>
-            <li><a href="http://127.0.0.1:8000/reports/">Reports</a></li>
-            <li><a href="http://127.0.0.1:8000/workeradministration/">Worker Administration</a></li>
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <li class="navbar-text">Welcome, {{ user.username }}!</li>
-            <li><a href="http://127.0.0.1:8000/logout/">Logout</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </nav>
+    {% if user.is_staff %}
+        <!-- Fixed navbar -->
+        <nav class="navbar navbar-default navbar-fixed-top">
+          <div class="container">
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <a class="navbar-brand" href="http://127.0.0.1:8000/">MAStucco</a>
+            </div>
+            <div id="navbar" class="navbar-collapse collapse">
+              <ul class="nav navbar-nav">
+                <li class="active"><a href="http://127.0.0.1:8000/">Home</a></li>
+                <li><a href="http://127.0.0.1:8000/workorders/">Work Orders</a></li>
+                <li><a href="http://127.0.0.1:8000/reports/">Reports</a></li>
+                <li><a href="http://127.0.0.1:8000/workeradministration/">Worker Administration</a></li>
+              </ul>
+              <ul class="nav navbar-nav navbar-right">
+                <li class="navbar-text">Welcome, {{ user.username }}!</li>
+                <li><a href="http://127.0.0.1:8000/logout/">Logout</a></li>
+              </ul>
+            </div><!--/.nav-collapse -->
+          </div>
+        </nav>
+    {% else %}
+        <!-- Fixed navbar -->
+        <nav class="navbar navbar-default navbar-fixed-top">
+          <div class="container">
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <a class="navbar-brand" href="http://127.0.0.1:8000/">MAStucco</a>
+            </div>
+            <div id="navbar" class="navbar-collapse collapse">
+              <ul class="nav navbar-nav">
+                <li class="active"><a href="http://127.0.0.1:8000/">Home</a></li>
+                <li><a href="http://127.0.0.1:8000/workorders/">Work Orders</a></li>
+              </ul>
+              <ul class="nav navbar-nav navbar-right">
+                <li class="navbar-text">Welcome, {{ user.username }}!</li>
+                <li><a href="http://127.0.0.1:8000/logout/">Logout</a></li>
+              </ul>
+            </div><!--/.nav-collapse -->
+          </div>
+        </nav>
+    {% endif %}
 {% endblock %}
 {% block content %}
     <br/>
     {% if user.is_staff %}
         <div class="container-fluid" id="uncashed_jobs">
             <div class="row">
-                <div class="col-md-8">
+                <div class="col-md-12">
                     <div class="panel panel-default">
                         <!-- Default panel contents -->
                         <div class="panel-heading">
@@ -56,19 +83,25 @@
             </div>
         </div>
     {% else %}
-        <div class="panel panel-default">
-            <!-- Default panel contents -->
-            <div class="panel-heading">
-                <h2 class="panel-title">Your Pending Work Orders</h2>
-            </div>
-            <!-- List group -->
-            <div class="list-group">
-                {% for work_order in work_orders %}
-                    <a href="#" class="list-group-item">
-                        <h4 class="list-group-item-heading">Customer: {{ work_order.customer }}</h4>
-                        <p class="list-group-item-text"><strong>Date:</strong> {{ work_order.date|date:'l, F jS' }}</p>
-                    </a>
-                {% endfor %}
+        <div class="container-fluid" id="uncashed_jobs">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="panel panel-default">
+                        <!-- Default panel contents -->
+                        <div class="panel-heading">
+                            <h2 class="panel-title">Your Pending Work Orders</h2>
+                        </div>
+                        <!-- List group -->
+                        <div class="list-group">
+                            {% for work_order in work_orders %}
+                                <a href="#" class="list-group-item">
+                                    <h4 class="list-group-item-heading">Customer: {{ work_order.customer }}</h4>
+                                    <p class="list-group-item-text"><strong>Date:</strong> {{ work_order.date|date:'l, F jS' }}</p>
+                                </a>
+                            {% endfor %}
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     {% endif %}
