--- a/MAStucco/templates/login.html
+++ b/MAStucco/templates/login.html
@@ -10,10 +10,16 @@
     <div class="container">
         <div class="row">
             <div class="col-md-4 col-md-offset-4">
-                <div style="background-color: rgba(0, 0, 0, 0.3);border-radius: 15px;padding-bottom: 23px;">
+                <div style="background-color: rgba(0, 0, 0, 0.5);border-radius: 15px;padding-bottom: 23px;">
                     <form action="" method="post" class="form-signin">
                         {% csrf_token %}
                         <h2 class="form-signin-heading">Login with your credentials</h2>
+                        {% if next %}
+                            <p class="form-signin-warning">You are authenticated as {{ user.username }},
+                                but are not authorized to access this page.
+                                Would you like to login to a different account?
+                            </p>
+                        {% endif %}
                         <label for="inputUsername" class="sr-only">Username</label>
                         <input type="text" id="inputUsername" name="inputUsername" class="form-control" placeholder="Username"
                                required autofocus>
