--- a/MAStucco/templates/reports.html
+++ b/MAStucco/templates/reports.html
@@ -33,9 +33,9 @@
 
 {% block content %}
         <br/>
-        <div class="container-fluid" id="uncashed_jobs">
-            <div class="row">
-                <div class="col-md-8">
+        <!--<div class="container-fluid" id="uncashed_jobs">-->
+            <div class="row-fluid" id="uncashed_jobs">
+                <div class="col-xs-12 col-sm-8" >
                     <div class="panel panel-default">
                         <!-- Default panel contents -->
                         <div class="panel-heading">
@@ -55,12 +55,18 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-xs-12 col-sm-2">
+                    <button class="btn btn-lg btn-primary btn-block" id="cashedJ" type="button">Cashed</button>
+                </div>
+                <div class="col-xs-12 col-sm-2">
+                    <button class="btn btn-lg btn-primary btn-block" id="uncashedJ" type="button">Uncashed</button>
+                </div>
             </div>
-        </div>
+        <!--</div>-->
 
-        <div class="container-fluid" id="cashed_jobs" style="display: none;">
-            <div class="row">
-                <div class="col-md-8">
+        <!--<div class="container-fluid" id="cashed_jobs" style="display: none;">-->
+            <div class="row-fluid" id="cashed_jobs" style="display: none;">
+                <div class="col-xs-12 col-md-8">
                     <div class="panel panel-default">
                         <!-- Default panel contents -->
                         <div class="panel-heading">
@@ -80,10 +86,16 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-xs-12 col-sm-2">
+                    <button class="btn btn-lg btn-primary btn-block" id="cashedJ2" type="button">Cashed</button>
+                </div>
+                <div class="col-xs-12 col-sm-2">
+                    <button class="btn btn-lg btn-primary btn-block" id="uncashedJ2" type="button">Uncashed</button>
+                </div>
             </div>
-        </div>
-        <button class="btn btn-lg btn-primary btn-block" id="chashedJ" type="button">Check cashed</button>
-        <button class="btn btn-lg btn-primary btn-block" id="unchashedJ" type="button">Check uncashed</button>
+        <!--</div>-->
+
+
 {% endblock %}
 
 {% block custom_js %}
