--- a/MAStucco/templates/workorder_admin.html
+++ b/MAStucco/templates/workorder_admin.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'workorder.html' %}
 {% load filters %}
 {% block navbar %}
     <!-- Fixed navbar -->
@@ -29,4 +29,86 @@
     </nav>
 {% endblock %}
 {% block content %}
+    <br/>
+        <div class="container-fluid" id="report_info">
+            <div class="row">
+                <div class="col-md-8">
+                    <div class="panel panel-default">
+
+                        <table class="table">
+                                <tr>
+                                    <th colspan="3">Work Order Information</th>
+                                </tr>
+                                <tr></tr>
+                            <tbody>
+                                <tr>
+                                    <td><p class="list-group-item-text"><strong>Customer:</strong> {{ wOrder.customer }}</p></td>
+                                    <td><p class="list-group-item-text"><strong>Phase:</strong> {{ wOrder.work_phase|extend_work_phase }}</p></td>
+                                    <td><p class="list-group-item-text"><strong>Worker:</strong> {{ wOrder.assigned_worker.first_name }}
+                                                    {{ wOrder.assigned_worker.last_name }}</p></td>
+                                    <td>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td><p class="list-group-item-text"><strong>Date:</strong> {{ wOrder.date|date:'l, F jS' }}</p></td>
+                                    <td><p class="list-group-item-text"><strong>Order By:</strong> {{ wOrder.order_by }}</p></td>
+                                    <td><p class="list-group-item-text"><strong>Model:</strong> {{ wOrder.model }}</p></td>
+                                    <td><p class="list-group-item-text"><strong>Notes:</strong> {{ wOrder.notes }}</p></td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+            <br/>
+
+            <div class="row">
+                <div class="col-md-8">
+                    <div class="panel panel-default">
+                        <table class="table">
+                                <tr>
+                                    <th colspan="3">Part Order Information</th>
+                                </tr>
+                                <tr></tr>
+                            <tbody>
+                                {% for work_order in pOrder %}
+                                    <tr>
+                                        <td><p class="list-group-item-text"><strong>Quantity:</strong> {{ work_order.quantity }}</p></td>
+                                        <td><p class="list-group-item-text"><strong>Part:</strong> {{ work_order.part }}</p></td>
+                                        <td><p class="list-group-item-text"><strong>Measure:</strong> {{ work_order.measure }}</p></td>
+                                    </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        <br/>
+            <div class="row">
+                <div class="col-md-8">
+                    <div class="panel panel-default">
+                        <table class="table">
+                                <tr>
+                                    <th colspan="3">Job Information</th>
+                                </tr>
+                                <tr></tr>
+                            <tbody>
+                                <tr>
+                                    <td><p class="list-group-item-text"><strong>Lot:</strong> {{ wOrder.job.lot }}</p></td>
+                                    <td><p class="list-group-item-text"><strong>Address:</strong> {{ wOrder.job.address }}</p></td>
+                                    <td><p class="list-group-item-text"><strong>Subdivision:</strong> {{ wOrder.job.subdivision }}</p></td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        {% if not wOrder.is_cashed %}
+            <button class="btn btn-lg btn-primary btn-block" id="cashed" type="button">Check cashed</button>
+        {% endif %}
+        </div>
+{% endblock %}
+
+{% block custom_js %}
+    <script src="{% static 'js/workorder.js' %}"></script>
 {% endblock %}
