--- a/MAStucco/WAMAStucco/static/css/wamastucco.css
+++ b/MAStucco/WAMAStucco/static/css/wamastucco.css
@@ -1,6 +1,27 @@
+html {
+    position: relative;
+    min-height: 100%;
+}
 body {
   padding-top: 50px;
+  margin-bottom: 60px;
   background-color: #fdfcfd;
+}
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    /* Set the fixed height of the footer here */
+    height: 60px;
+    background-color: #f5f5f5;
+    border-top: 1px solid #dddddd;
+}
+.footer > .container {
+    padding-right: 15px;
+    padding-left: 15px;
+}
+.container .text-muted {
+    margin: 20px 0;
 }
 
 /* NAVBAR STYLING */
