--- a/MAStucco/templates/base.html
+++ b/MAStucco/templates/base.html
@@ -27,6 +27,61 @@
 <body>
 
     {% block navbar %}
+        {% if user.is_staff %}
+            <!-- Fixed navbar -->
+            <nav class="navbar navbar-default navbar-fixed-top">
+              <div class="container">
+                <div class="navbar-header">
+                  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                  </button>
+                  <a class="navbar-brand" href="http://127.0.0.1:8000/">MAStucco</a>
+                </div>
+                <div id="navbar" class="navbar-collapse collapse">
+                  <ul class="nav navbar-nav">
+                    <li class="{% ifequal request.path '/' %}active{% endifequal %}"><a href="http://127.0.0.1:8000/">Home</a></li>
+                    <li class="{% if '/workorders/' in request.path %}active{% endif %}"><a href="http://127.0.0.1:8000/workorders/">Work
+                        Orders</a></li>
+                    <li class="{% if '/reports/' in request.path %}active{% endif %}"><a href="http://127.0.0.1:8000/reports/">Reports</a></li>
+                    <li class="{% if '/workeradministration/' in request.path %}active{% endif %}"><a href="http://127.0.0.1:8000/workeradministration/">Worker Administration</a></li>
+                  </ul>
+                  <ul class="nav navbar-nav navbar-right">
+                    <li class="navbar-text">Welcome, {{ user.username }}!</li>
+                    <li><a href="http://127.0.0.1:8000/logout/">Logout</a></li>
+                  </ul>
+                </div><!--/.nav-collapse -->
+              </div>
+            </nav>
+        {% else %}
+            <!-- Fixed navbar -->
+            <nav class="navbar navbar-default navbar-fixed-top">
+              <div class="container">
+                <div class="navbar-header">
+                  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                  </button>
+                  <a class="navbar-brand" href="http://127.0.0.1:8000/">MAStucco</a>
+                </div>
+                <div id="navbar" class="navbar-collapse collapse">
+                  <ul class="nav navbar-nav">
+                    <li class="{% ifequal request.path '/' %}active{% endifequal %}"><a href="http://127.0.0.1:8000/">Home</a></li>
+                    <li class="{% if '/workorders/' in request.path %}active{% endif %}"><a href="http://127.0.0.1:8000/workorders/">Work
+                        Orders</a></li>
+                  </ul>
+                  <ul class="nav navbar-nav navbar-right">
+                    <li class="navbar-text">Welcome, {{ user.username }}!</li>
+                    <li><a href="http://127.0.0.1:8000/logout/">Logout</a></li>
+                  </ul>
+                </div><!--/.nav-collapse -->
+              </div>
+            </nav>
+        {% endif %}
     {% endblock %}
 
     {% if messages %}
@@ -38,6 +93,14 @@
     {% endif %}
 
     {% block content %}
+    {% endblock %}
+
+    {% block footer %}
+        <footer class="footer">
+            <div class="container">
+                <p class="text-muted">&copy MAStucco</p>
+            </div>
+        </footer>
     {% endblock %}
 
     <!-- Bootstrap core JavaScript
