--- a/MAStucco/templates/login.html
+++ b/MAStucco/templates/login.html
@@ -5,6 +5,9 @@
     <link href="{% static 'css/login.css' %}" rel="stylesheet">
 {% endblock %}
 
+{% block navbar %}
+{% endblock %}
+
 {% block content %}
 
     <div class="container">
@@ -34,3 +37,6 @@
     </div>
 
  {% endblock %}
+
+{% block footer %}
+{% endblock %}
