--- a/MAStucco/WAMAStucco/static/css/wamastucco.css
+++ b/MAStucco/WAMAStucco/static/css/wamastucco.css
@@ -24,6 +24,11 @@ body {
     margin: 20px 0;
 }
 
+.clear{
+    clear: both;
+    height: 20px;
+}
+
 /* NAVBAR STYLING */
 .navbar-default {
   background-color: #e26130;
