--- a/MAStucco/templates/base.html
+++ b/MAStucco/templates/base.html
@@ -42,7 +42,7 @@
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                   <ul class="nav navbar-nav">
-                    <li class="{% ifequal request.path '/' %}active{% endifequal %}"><a href="http://127.0.0.1:8000/">Home</a></li>
+                    <li class="{% if '/home/' in request.path %}active{% endif %}"><a href="http://127.0.0.1:8000/">Home</a></li>
                     <li class="{% if '/workorders/' in request.path %}active{% endif %}"><a href="http://127.0.0.1:8000/workorders/">Work
                         Orders</a></li>
                     <li class="{% if '/reports/' in request.path %}active{% endif %}"><a href="http://127.0.0.1:8000/reports/">Reports</a></li>
@@ -96,6 +96,7 @@
     {% endblock %}
 
     {% block footer %}
+        <div class="clear"></div>
         <footer class="footer">
             <div class="container">
                 <p class="text-muted">&copy MAStucco</p>
