--- a/MAStucco/templates/reports_cashed.html
+++ b/MAStucco/templates/reports_cashed.html
@@ -33,10 +33,19 @@
 
 {% block content %}
         <br/>
+    <!--Search bar-->
     <form action='' method='post'>
         {% csrf_token %}
-        <input type='text' name="search_title" size="30"><input type='submit' value='Search'>
-    </form><hr>
+        <div class="col-lg-6">
+            <div class="input-group">
+              <span class="input-group-btn">
+                <button class="btn btn-default" type='submit' value='Search'>Go!</button>
+              </span>
+                <input class="form-control" type='text' name="search_title" size="30" placeholder="Search for...">
+            </div>
+        </div>
+    </form>
+
         <!--<div class="container-fluid" id="cashed_jobs" style="display: none;">-->
             <div class="row-fluid" id="cashed_jobs">
                 <div class="col-xs-12 col-md-8">
