--- a/MAStucco/templates/reports_cashed.html
+++ b/MAStucco/templates/reports_cashed.html
@@ -92,7 +92,7 @@
             {% endif %}
         </div>
         <div class="col-xs-12 col-sm-2">
-            <button class="btn btn-lg btn-primary btn-block" id="cashedJ2" type="button">Cashed</button>
+            <button class="btn btn-lg btn-primary btn-block" id="cashedJ2" type="button" style="background-color: #ffb277;">Cashed</button>
         </div>
         <div class="col-xs-12 col-sm-2">
             <button class="btn btn-lg btn-primary btn-block" id="uncashedJ2" type="button">Uncashed</button>
