--- a/MAStucco/templates/base.html
+++ b/MAStucco/templates/base.html
@@ -85,11 +85,11 @@
     {% endblock %}
 
     {% if messages %}
-        <ul class="messages">
+        <div class="messages">
             {% for message in messages %}
-                <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                <p{% if message.tags %} class ="alert alert-success"{% endif %}>{{ message }}</p>
             {% endfor %}
-        </ul>
+        </div>
     {% endif %}
 
     {% block content %}
