--- a/MAStucco/templates/base.html
+++ b/MAStucco/templates/base.html
@@ -87,7 +87,10 @@
     {% if messages %}
         <div class="messages">
             {% for message in messages %}
-                <p{% if message.tags %} class ="alert alert-success"{% endif %}>{{ message }}</p>
+                <div{% if message.tags == 'success' %} class ="alert alert-success"{% endif %}
+                        {% if message.tags == 'error' %} class ="alert alert-danger"{% endif %} role="alert">{{ message }}
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                </div>
             {% endfor %}
         </div>
     {% endif %}
