Diseño de la suite de testing
Se diseñan las pruebas automaticas de la pagina

--- a/MAStucco/templates/home.html
+++ b/MAStucco/templates/home.html
@@ -12,7 +12,7 @@
               <span class="input-group-btn">
                 <button class="btn btn-default" type='submit' value='Search'>Go!</button>
               </span>
-                <input class="form-control" type='text' name="search_title" size="30" placeholder="Search for...">
+                <input class="form-control" type='text' id='search_title' name="search_title" size="30" placeholder="Search for...">
             </div>
         </div>
     </form>
