--- a/MAStucco/templates/base.html
+++ b/MAStucco/templates/base.html
@@ -38,19 +38,19 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                   </button>
-                  <a class="navbar-brand" href="http://127.0.0.1:8000/home/">MAStucco</a>
+                  <a class="navbar-brand" href="http://mastucco.pythonanywhere.com/home/">MAStucco</a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                   <ul class="nav navbar-nav">
-                    <li class="{% if '/home/' in request.path %}active{% endif %}"><a href="http://127.0.0.1:8000/home/">Home</a></li>
-                    <li class="{% if '/workorders/' in request.path %}active{% endif %}"><a href="http://127.0.0.1:8000/workorders/">Work
+                    <li class="{% if '/home/' in request.path %}active{% endif %}"><a href="http://mastucco.pythonanywhere.com/home/">Home</a></li>
+                    <li class="{% if '/workorders/' in request.path %}active{% endif %}"><a href="http://mastucco.pythonanywhere.com/workorders/">Work
                         Orders</a></li>
-                    <li class="{% if '/reports/' in request.path %}active{% endif %}"><a href="http://127.0.0.1:8000/reports/">Reports</a></li>
-                    <li class="{% if '/workeradministration/' in request.path %}active{% endif %}"><a href="http://127.0.0.1:8000/workeradministration/">Worker Administration</a></li>
+                    <li class="{% if '/reports/' in request.path %}active{% endif %}"><a href="http://mastucco.pythonanywhere.com/reports/">Reports</a></li>
+                    <li class="{% if '/workeradministration/' in request.path %}active{% endif %}"><a href="http://mastucco.pythonanywhere.com/workeradministration/">Worker Administration</a></li>
                   </ul>
                   <ul class="nav navbar-nav navbar-right">
                     <li class="navbar-text">Welcome, {{ user.username }}!</li>
-                    <li><a href="http://127.0.0.1:8000/logout/">Logout</a></li>
+                    <li><a href="http://mastucco.pythonanywhere.com/logout/">Logout</a></li>
                   </ul>
                 </div><!--/.nav-collapse -->
               </div>
@@ -66,17 +66,17 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                   </button>
-                  <a class="navbar-brand" href="http://127.0.0.1:8000/">MAStucco</a>
+                  <a class="navbar-brand" href="http://mastucco.pythonanywhere.com/">MAStucco</a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                   <ul class="nav navbar-nav">
-                    <li class="{% if '/home/' in request.path %}active{% endif %}"><a href="http://127.0.0.1:8000/home/">Home</a></li>
-                    <li class="{% if '/workorders/' in request.path %}active{% endif %}"><a href="http://127.0.0.1:8000/workorders/">Work
+                    <li class="{% if '/home/' in request.path %}active{% endif %}"><a href="http://mastucco.pythonanywhere.com/home/">Home</a></li>
+                    <li class="{% if '/workorders/' in request.path %}active{% endif %}"><a href="http://mastucco.pythonanywhere.com/workorders/">Work
                         Orders</a></li>
                   </ul>
                   <ul class="nav navbar-nav navbar-right">
                     <li class="navbar-text">Welcome, {{ user.username }}!</li>
-                    <li><a href="http://127.0.0.1:8000/logout/">Logout</a></li>
+                    <li><a href="http://mastucco.pythonanywhere.com/logout/">Logout</a></li>
                   </ul>
                 </div><!--/.nav-collapse -->
               </div>
