--- a/MAStucco/templates/new_worker.html
+++ b/MAStucco/templates/new_worker.html
@@ -31,7 +31,7 @@
             <input class="btn btn-lg btn-primary btn-block" type='submit' value='Add Worker'/>
             </div>
             <div class="col-xs-12 col-sm-2">
-            <a href="http://127.0.0.1:8000/workeradministration/" id="cancel" name="cancel" class="btn btn-lg btn-primary btn-block">Cancel</a>
+            <a href="http://mastucco.pythonanywhere.com/workeradministration/" id="cancel" name="cancel" class="btn btn-lg btn-primary btn-block">Cancel</a>
             </div>
         </div>
     </form>
