--- a/MAStucco/templates/reports_cashed.html
+++ b/MAStucco/templates/reports_cashed.html
@@ -13,18 +13,18 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="http://127.0.0.1:8000/">MAStucco</a>
+          <a class="navbar-brand" href="http://mastucco.pythonanywhere.com/">MAStucco</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li><a href="http://127.0.0.1:8000/">Home</a></li>
             <li><a href="http://127.0.0.1:8000/workorders/">Work Orders</a></li>
             <li class="active"><a href="http://127.0.0.1:8000/reports">Reports</a></li>
-            <li><a href="http://127.0.0.1:8000/workeradministration/">Worker Administration</a></li>
+            <li><a href="http://mastucco.pythonanywhere.com/workeradministration/">Worker Administration</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li class="navbar-text">Welcome, {{ user.username }}!</li>
-            <li><a href="http://127.0.0.1:8000/logout/">Logout</a></li>
+            <li><a href="http://mastucco.pythonanywhere.com/logout/">Logout</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -59,7 +59,7 @@
                 <!-- List group -->
                 <div class="list-group">
                     {% for work_order in cashed_work_orders %}
-                        <a href="http://127.0.0.1:8000/reports/info/{{ work_order.id }}" class="list-group-item">
+                        <a href="http://mastucco.pythonanywhere.com/reports/info/{{ work_order.id }}" class="list-group-item">
                             <h4 class="list-group-item-heading">Customer: {{ work_order.customer }}</h4>
                             <p class="list-group-item-text"><strong>Phase:</strong> {{ work_order.work_phase|extend_work_phase }}</p>
                             <p class="list-group-item-text"><strong>Worker:</strong> {{ work_order.assigned_worker.first_name }}
