--- a/MAStucco/templates/workeradministration_unactive.html
+++ b/MAStucco/templates/workeradministration_unactive.html
@@ -17,14 +17,14 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li><a href="http://127.0.0.1:8000/">Home</a></li>
-            <li><a href="http://127.0.0.1:8000/workorders/">Work Orders</a></li>
-            <li><a href="http://127.0.0.1:8000/reports">Reports</a></li>
-            <li class="active"><a href="http://127.0.0.1:8000/workeradministration/">Worker Administration</a></li>
+            <li><a href="http://mastucco.pythonanywhere.com/">Home</a></li>
+            <li><a href="http://mastucco.pythonanywhere.com/workorders/">Work Orders</a></li>
+            <li><a href="http://mastucco.pythonanywhere.com/reports">Reports</a></li>
+            <li class="active"><a href="http://mastucco.pythonanywhere.com/workeradministration/">Worker Administration</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li class="navbar-text">Welcome, {{ user.username }}!</li>
-            <li><a href="http://127.0.0.1:8000/logout/">Logout</a></li>
+            <li><a href="http://mastucco.pythonanywhere.com/logout/">Logout</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -59,7 +59,7 @@
                 <!-- List group -->
                 <div class="list-group">
                     {% for user in unactive_workers_list %}
-                        <a href="http://127.0.0.1:8000/workeradministration/info/{{ user.id }}" class="list-group-item">
+                        <a href="http://mastucco.pythonanywhere.com/workeradministration/info/{{ user.id }}" class="list-group-item">
                             <h4 class="list-group-item-heading">Username: {{ user.username }}</h4>
                             <p class="list-group-item-text"><strong>Full Name:</strong> {{ user.first_name }}
                                 {{ user.last_name }}</p>
